; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/common/extr_relation.c_relation_openrv_extended.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/common/extr_relation.c_relation_openrv_extended.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NoLock = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @relation_openrv_extended(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i64, i64* %6, align 8
  %10 = load i64, i64* @NoLock, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = call i32 (...) @AcceptInvalidationMessages()
  br label %14

14:                                               ; preds = %12, %3
  %15 = load i32*, i32** %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @RangeVarGetRelid(i32* %15, i64 %16, i32 %17)
  store i32 %18, i32* %8, align 4
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @OidIsValid(i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %14
  store i32* null, i32** %4, align 8
  br label %27

23:                                               ; preds = %14
  %24 = load i32, i32* %8, align 4
  %25 = load i64, i64* @NoLock, align 8
  %26 = call i32* @relation_open(i32 %24, i64 %25)
  store i32* %26, i32** %4, align 8
  br label %27

27:                                               ; preds = %23, %22
  %28 = load i32*, i32** %4, align 8
  ret i32* %28
}

declare dso_local i32 @AcceptInvalidationMessages(...) #1

declare dso_local i32 @RangeVarGetRelid(i32*, i64, i32) #1

declare dso_local i32 @OidIsValid(i32) #1

declare dso_local i32* @relation_open(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
